Selected user marker display and updates on android location change, no trails #Bug-Fix#1 for android App - only send GPS location, watch out for jumping to network Location

--- a/src/css/MapContainer.scss
+++ b/src/css/MapContainer.scss
@@ -4,3 +4,16 @@
     width: 75%;
     height: 500px;
 }
+
+.map {
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+  height: 300px;
+}
+
+@media screen and (min-width: 1024px){
+    .map {
+        height: 500px;
+    }
+}
